<resources>
    <string name="app_name">ASingleChat</string>

    <string name="account">账号</string>
    <string name="account_hint">请输入手机号或邮箱</string>
    <string name="password">密码</string>
    <string name="password_hint">输入密码</string>
    <string name="register">注册</string>
    <string name="login">渠道登录</string>
    <string name="go_to_login">前去登录</string>
    <string name="go_to_register">前去注册</string>
    <string name="labels">备注</string>
    <string name="nick_name">昵称</string>
    <string name="send_message">发消息</string>
    <string name="delete_friend">删除好友</string>
    <string name="person_info">个人信息</string>
    <string name="sure">确定</string>
    <string name="pass">通过</string>
    <string name="already_pass">已通过</string>
    <string name="set_note">设置备注</string>
    <string name="note_name">备注名</string>
    <string name="input_labels">输入标签</string>
    <string name="input_note">输入备注</string>
    <string name="all_labels">所有标签</string>
    <string name="new_friends">新朋友</string>
    <string name="group_chat">群聊</string>
    <string name="please_input_account">请输入账号</string>
    <string name="please_input_pwd">请输入密码</string>
    <string name="save_edit">保存本次编辑？</string>
    <string name="no_save">不保存</string>
    <string name="save">保存</string>
    <string name="logout">退出登录</string>
    <string name="add_friend_success">添加成功</string>
    <string name="add_friend_faild">添加好友失败</string>


    <string name="home_nav1">首页</string>
    <string name="home_nav2">聊天</string>
    <string name="home_nav3">通讯录</string>
    <string name="home_nav4">我的</string>
    <string name="search">搜索</string>
    <string name="search_nick">搜索昵称</string>
    <string name="add_friend">添加朋友</string>
    <string name="scan_code">扫描二维码</string>
    <string name="add">添加</string>
    <string name="added">已添加</string>
    <string name="my_scan_code">我的二维码</string>
    <string name="modify_nick">修改昵称</string>
    <string name="modify_avatar">修改头像</string>
    <string name="camera">拍照</string>
    <string name="select_from_phone">从手机相册选择</string>
    <string name="cancel">取消</string>
    <string name="empty_nick_hint">昵称不能为空</string>
    <string name="modify_success">修改成功</string>
    <string name="group_chat_user">群聊成员</string>
    <string name="complete">完成</string>
    <string name="delete">删除</string>
    <string name="add_success">添加成功！</string>
    <string name="add_failure">添加失败！</string>
    <string name="modify_failure">修改失败！</string>
    <string name="please_input_search_content">请输入搜索内容</string>

    <!--二维码扫描 -->
    <string name="preferences_front_light_auto">自动</string>
    <string name="preferences_front_light_off">关</string>
    <string name="preferences_front_light_on">开</string>
    <string name="preferences_actions_title">扫描成功</string>
    <string name="preferences_auto_focus_title">自动对焦</string>
    <string name="preferences_auto_open_web_title">自动打开网页</string>
    <string name="preferences_bulk_mode_summary">连续扫描并保存多个条码</string>
    <string name="preferences_bulk_mode_title">批量扫描模式</string>
    <string name="preferences_copy_to_clipboard_title">复制到剪贴板</string>
    <string name="preferences_custom_product_search_summary" formatted="false">替换：％s=内容，％f=格式，％t=类型</string>
    <string name="preferences_custom_product_search_title">自定义搜索网址</string>
    <string name="preferences_decode_1D_industrial_title">一维码：工业</string>
    <string name="preferences_decode_1D_product_title">一维码：商品</string>
    <string name="preferences_decode_Aztec_title">Aztec</string>
    <string name="preferences_decode_Data_Matrix_title">Data Matrix</string>
    <string name="preferences_decode_PDF417_title">PDF417 (测试)</string>
    <string name="preferences_decode_QR_title">二维码</string>
    <string name="preferences_device_bug_workarounds_title">设备适配</string>
    <string name="preferences_disable_barcode_scene_mode_title">不进行条形码场景匹配</string>
    <string name="preferences_disable_continuous_focus_summary">使用标准对焦模式</string>
    <string name="preferences_disable_continuous_focus_title">不持续对焦</string>
    <string name="preferences_disable_exposure_title">不曝光</string>
    <string name="preferences_disable_metering_title">不使用距离测量</string>
    <string name="preferences_front_light_summary">设置闪光灯模式</string>
    <string name="preferences_front_light_title">闪光灯</string>
    <string name="preferences_general_title">扫描设置</string>
    <string name="preferences_history_summary">自动将条码存入历史记录</string>
    <string name="preferences_history_title">存入历史记录</string>
    <string name="preferences_invert_scan_summary">扫描黑色背景上的白色条码。仅适用于部分设备。</string>
    <string name="preferences_invert_scan_title">反色</string>
    <string name="preferences_name">选项</string>
    <string name="preferences_orientation_title">不自动旋转</string>
    <string name="preferences_play_beep_title">播放提示音</string>
    <string name="preferences_remember_duplicates_summary">在历史记录中保存重复的记录</string>
    <string name="preferences_remember_duplicates_title">保存重复记录</string>
    <string name="preferences_result_title">搜索设置</string>
    <string name="preferences_scanning_title">条码类型</string>
    <string name="preferences_search_country">搜索引擎国别</string>
    <string name="preferences_supplemental_summary">尝试检索关于条码内容的更多信息</string>
    <string name="preferences_supplemental_title">检索更多信息</string>
    <string name="preferences_vibrate_title">振动</string>
    <string name="msg_error">错误</string>
    <string name="msg_invalid_value">值无效</string>

</resources>
