<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/space_30"
        android:layout_marginRight="@dimen/space_30"
        android:layout_marginTop="@dimen/space_90">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account"
            android:textSize="@dimen/font_14"
            android:textColor="@color/color_999999"/>

        <EditText
            android:id="@+id/et_account_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_50"
            android:background="@null"
            android:textCursorDrawable="@drawable/cursor"
            android:textColorHint="@color/color_b3b3b3"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/font_14"
            android:hint="@string/account_hint"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_1"
        android:layout_marginLeft="@dimen/space_30"
        android:layout_marginRight="@dimen/space_30"
        android:background="@color/color_f3f3f3"
        android:layout_marginTop="@dimen/space_6"/>


    <LinearLayout
        android:id="@+id/ll_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/space_30"
        android:layout_marginRight="@dimen/space_30"
        android:layout_marginTop="@dimen/space_48">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="@dimen/font_14"
            android:textColor="@color/color_999999"/>

        <EditText
            android:id="@+id/et_pwd_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_50"
            android:background="@null"
            android:inputType="textPassword"
            android:textCursorDrawable="@drawable/cursor"
            android:textColorHint="@color/color_b3b3b3"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/font_14"
            android:hint="@string/password_hint"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_1"
        android:layout_marginLeft="@dimen/space_30"
        android:layout_marginRight="@dimen/space_30"
        android:background="@color/color_f3f3f3"
        android:layout_marginTop="@dimen/space_6"/>

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_62"
        android:layout_marginLeft="@dimen/space_15"
        android:layout_marginRight="@dimen/space_15"
        android:text="@string/register"
        android:background="@drawable/login_btn_bg"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:textColor="@color/color_ffffff"
        android:textSize="@dimen/font_18"/>

    <TextView
        android:id="@+id/tv_go_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_60"
        android:textSize="@dimen/font_12"
        android:textColor="@color/color_d1d1d1"
        android:text="@string/go_to_login"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>