<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_camera"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_48"
        android:background="@color/color_E5E9F0"
        android:gravity="center"
        android:text="@string/camera"
        android:textColor="@color/color_030303"
        android:textSize="@dimen/font_16" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_1"
        android:background="@color/color_A1A1A1" />

    <TextView
        android:id="@+id/tv_phone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_48"
        android:background="@color/color_E5E9F0"
        android:gravity="center"
        android:text="@string/select_from_phone"
        android:textColor="@color/color_030303"
        android:textSize="@dimen/font_16" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_6"
        android:background="@color/color_A1A1A1" />

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_48"
        android:background="@color/color_E5E9F0"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/color_030303"
        android:textSize="@dimen/font_16" />
</LinearLayout>
