<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_f9f9f9"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_35"
        android:layout_marginTop="@dimen/space_16"
        android:background="@color/color_white"
        android:gravity="center_vertical"
     >

        <ImageView
            android:id="@+id/iv_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/space_15"
            android:src="@drawable/search_friend_icon" />

        <EditText
            android:id="@+id/et_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/space_3"
            android:layout_marginRight="@dimen/space_100"
            android:layout_toRightOf="@+id/iv_search"
            android:background="@null"
            android:textCursorDrawable="@drawable/cursor"
            android:textColor="@color/color_333333"
            android:gravity="start|center_vertical"
            android:hint="@string/search_nick"
            android:textColorHint="@color/color_999999"
            android:textSize="@dimen/font_12"
            android:lines="1"
            android:inputType="text"/>

        <ImageView
            android:id="@+id/iv_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/space_40"
            android:layout_centerVertical="true"
            android:padding="@dimen/space_10"
            android:src="@drawable/search_cancel_icon" />

        <TextView
            android:id="@+id/tv_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/space_8"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:text="@string/search"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_scan_code"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_42"
        android:layout_marginTop="@dimen/space_24"
        android:background="@color/color_white"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/space_12"
        android:textColor="@color/color_333333"
        android:textSize="@dimen/font_12"
        android:text="@string/scan_code"
        />

    <cn.berfy.sdk.mvpbase.view.BaseRecyclerView
        android:id="@+id/rv_search_result"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:layout_marginTop="@dimen/space_16"
        android:visibility="gone"/>
</LinearLayout>
